WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306922
Address unsafe data member warning in RemoteLayerTreeDrawingAreaProxyIOS.mm
https://bugs.webkit.org/show_bug.cgi?id=306922
Summary
Address unsafe data member warning in RemoteLayerTreeDrawingAreaProxyIOS.mm
Chris Dumez
Reported
2026-02-03 20:23:45 PST
Address unsafe data member warning in RemoteLayerTreeDrawingAreaProxyIOS.mm.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-02-03 20:26:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57836
EWS
Comment 2
2026-02-04 01:34:01 PST
Committed
306762@main
(b67106752e43): <
https://commits.webkit.org/306762@main
> Reviewed commits have been landed. Closing PR #57836 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-04 01:35:13 PST
<
rdar://problem/169605283
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug