Address unsafe data member warning in RemoteLayerTreeDrawingAreaProxyIOS.mm https://bugs.webkit.org/show_bug.cgi?id=306922

Reviewed by Darin Adler.

* Source/WebKit/SaferCPPExpectations/NoUncheckedPtrMemberCheckerExpectations:
* Source/WebKit/SaferCPPExpectations/NoUncountedMemberCheckerExpectations:
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeDrawingAreaProxyIOS.mm:
(-[WKDisplayLinkHandler displayLinkFired:]):
(-[WKDisplayLinkHandler timerFired]):
(-[WKDisplayLinkHandler nominalFramesPerSecond]):
(-[WKDisplayLinkHandler didChangeNominalFramesPerSecond]):
(-[WKDisplayLinkHandler updateFrameRate]):

Canonical link: https://commits.webkit.org/306762@main